Bake preview missing (UV/Image Editor) #40751

Closed
opened 2014-06-21 23:09:12 +02:00 by David Black · 11 comments

System Information
Windows 7 x64, GTX 580m
Windows 7 x64, HD 4000 (display), 2 GTX 580 (GPGPU)

Blender Version
Blender 2.71 Hash 8365ceb (16th June)
Blender 2.71 RC2 Hash a19c1be (16th June)

Short description of error
Upon bake completion, a preview of the bake is not generated (see below image). After several bakes, quick image navigation is no longer possible in the UV/Image Editor.
Preview_missing_for_completed_bake.jpg
Exact steps for others to reproduce the error
Bake_displacement_issue_Preview_missing_for_completed_bake_test_-_DB.blend
In the above file the bake has already completed, in the UV/Image Editor click on image previews, a black square represents the Bake image.

After performing tests, it seems all that is necessary to generate a preview (once image is packed) is to flush the cache by clicking on bake image node and change Single Image to one of the other options, then back to Single Image. Programmatically there is no doubt a far more elegant solution.

Thank you,
David

**System Information** Windows 7 x64, GTX 580m Windows 7 x64, HD 4000 (display), 2 GTX 580 (GPGPU) **Blender Version** Blender 2.71 Hash 8365ceb (16th June) Blender 2.71 RC2 Hash a19c1be (16th June) **Short description of error** Upon bake completion, a preview of the bake is not generated (see below image). After several bakes, quick image navigation is no longer possible in the UV/Image Editor. ![Preview_missing_for_completed_bake.jpg](https://archive.blender.org/developer/F95211/Preview_missing_for_completed_bake.jpg) **Exact steps for others to reproduce the error** [Bake_displacement_issue_Preview_missing_for_completed_bake_test_-_DB.blend](https://archive.blender.org/developer/F95213/Bake_displacement_issue_Preview_missing_for_completed_bake_test_-_DB.blend) In the above file the bake has already completed, in the UV/Image Editor click on image previews, a black square represents the *Bake* image. After performing tests, it seems all that is necessary to generate a preview (once image is packed) is to flush the cache by clicking on bake image node and change *Single Image* to one of the other options, then back to *Single Image*. Programmatically there is no doubt a far more elegant solution. Thank you, David
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by David Black 2014-06-21 23:09:12 +02:00
Author

Added subscriber: @david_black

Added subscriber: @david_black

This issue also happens with Blender Internal. See the file: bake_preview_image.blend you cannot get a fresh preview image with Cycles or Blender Internal.

This issue also happens with Blender Internal. See the file: [bake_preview_image.blend](https://archive.blender.org/developer/F95288/bake_preview_image.blend) you cannot get a fresh preview image with Cycles or Blender Internal.

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

The lack of 'thumbnail' update also happens when painting in UV/Editor or the 3d View. @Psy-Fi did you handle that in your branch?

The lack of 'thumbnail' update also happens when painting in UV/Editor or the 3d View. @Psy-Fi did you handle that in your branch?

Yes I did, will be in master soon

Yes I did, will be in master soon

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Moved to the TODO list: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Render#Baking

This issue was referenced by f2c8209756

This issue was referenced by f2c820975699b9f07a516148df330e334dc3329c

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Closed by commit f2c8209756.

Closed by commit f2c8209756.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40751
No description provided.