Fix T40751 preview image not generated after baking.

A DAG_id_tag_update here is enough to fix the problem.